--- a/app/src/main/res/layout/setup_dialog.xml
+++ b/app/src/main/res/layout/setup_dialog.xml
@@ -70,11 +70,11 @@
         </RelativeLayout>
     </LinearLayout>
 
-
     <ProgressBar
         android:id="@+id/progress"
         android:layout_width="75dp"
         android:layout_height="75dp"
+        android:foregroundTint="#000000"
         android:layout_centerInParent="true"
         android:visibility="gone"/>
 
